feat: add data from my resume

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,96 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
-}
-
-@book{einstein1956investigations,
+@inproceedings{parichaya2024,
+  title={Parichaya: Rural Colloquial Knowledge AI Interface},
+  author={Srivatsa, Sharath and M, Aparna and P, Samarth and V, Malavika and Srinivasa, Srinath},
+  booktitle={12th ACM IKDD CODS and 30th COMAD},
+  year={2024},
+  abbr={CODS-COMAD},
   bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
-}
-
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
-}
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
   selected={true},
-  inspirehep_id = {3255}
+  abstract={Implemented a pipeline to easily search information from a corpus in colloquial Indic languages. Developed a RAG-based AI system for multi-modal question answering in Kannada.}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@Article{einstein1905photoelectriceffect,
+@inproceedings{nayana_ocr2025,
+  title={Nayana OCR: A Scalable Framework for Document OCR in Low-Resource Languages},
+  author={Kolavi, Adithya S and P, Samarth and Jain, Vyoman},
+  booktitle={NAACL 2025 Workshop on Language Models for Underserved Communities},
+  year={2025},
+  abbr={NAACL},
   bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+  selected={true},
+  abstract={Built a scalable framework for document OCR in low-resource languages, supporting over 22 languages with 2M+ document images.}
 }
 
-@book{przibram1967letters,
+@inproceedings{nayana_cvpr2025,
+  title={Nayana: A Foundation for Document-Centric Vision-Language Models via Multi-Task, Multimodal, and Multilingual Data Synthesis},
+  author={Kolavi, Adithya S and P, Samarth and Jain, Vyoman},
+  booktitle={CVPR 2025 Workshop on Vision-Language Models for All},
+  year={2025},
+  abbr={CVPR},
   bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+  selected={true},
+  award={Meta Llama Impact Grant ($100,000)},
+  award_name={Meta Llama Impact Grant},
+  abstract={Developed a scalable synthetic data framework to adapt Vision-Language Models (VLMs) for over 22 languages and multilingual documents. Created the Nayana Synthetic Dataset with 2M+ document images.},
+  note={Non-Archival}
+}
+
+@inproceedings{nayana_iccv2025,
+  title={Nayana: A Foundation for Document-Centric Vision-Language Models via Multi-Task, Multimodal, and Multilingual Data Synthesis},
+  author={Kolavi, Adithya S and P, Samarth and Jain, Vyoman},
+  booktitle={ICCV 2025 Workshop on Computer Vision for Developing Countries},
+  year={2025},
+  abbr={ICCV},
+  bibtex_show={true},
+  abstract={Developed a scalable synthetic data framework to adapt Vision-Language Models (VLMs) for over 22 languages and multilingual documents.}
+}
+
+@inproceedings{manimator2025,
+  title={Manimator: Transforming Research Papers and Mathematical Concepts into Visual Explanations},
+  author={P, Samarth and Jain, Vyoman and Golugula, Shiva and Sathvik, Motamarri Sai},
+  booktitle={ICML 2025 NewInML Workshop},
+  year={2025},
+  abbr={ICML},
+  bibtex_show={true},
+  selected={true},
+  abstract={Developed an AI-powered tool to transform research papers and mathematical concepts into animated visual explanations using the Manim engine. Achieved over 15,000+ uses within a week of launch and featured as Hugging Face's Space of the Week.},
+  html={https://github.com/samarth777},
+  note={Non-Archival}
+}
+
+@inproceedings{gemma_sutras_icml2025,
+  title={The Gemma Sutras: Fine-Tuning Gemma 3 for Sanskrit Sandhi Splitting},
+  author={P, Samarth and Mahalingam, Sanjay},
+  booktitle={ICML 2025 NewInML Workshop},
+  year={2025},
+  abbr={ICML},
+  bibtex_show={true},
+  abstract={Fine-tuned Gemma 3 for Sanskrit Sandhi Splitting, addressing challenges in processing Sanskrit text.},
+  note={Non-Archival}
+}
+
+@inproceedings{gemma_sutras_emnlp2025,
+  title={The Gemma Sutras: Fine-Tuning Gemma 3 for Sanskrit Sandhi Splitting},
+  author={P, Samarth and Mahalingam, Sanjay},
+  booktitle={EMNLP 2025 WiNLP Workshop},
+  year={2025},
+  abbr={EMNLP},
+  bibtex_show={true},
+  selected={true},
+  abstract={Fine-tuned Gemma 3 for Sanskrit Sandhi Splitting, addressing challenges in processing Sanskrit text.},
+  note={Archival}
+}
+
+@inproceedings{mudra_vlm2025,
+  title={Mudra-VLM: Adapting Vision-Language Models for Fine-Grained Bharatanatyam Mudra Recognition},
+  author={P, Samarth and Rajani, Sakshi},
+  booktitle={ICCV 2025 Workshop on Computer Vision for Developing Countries},
+  year={2025},
+  abbr={ICCV},
+  bibtex_show={true},
+  selected={true},
+  abstract={Adapted Vision-Language Models for fine-grained recognition of Bharatanatyam mudras (hand gestures), bridging computer vision and classical Indian dance.},
+  note={Non-Archival}
 }
